# timelinify

./: .editorconfig  .eslintrc.cjs  .gitattributes  .gitignore  LICENSE  README.md  change_version.ps1  creation_date.txt  exe_icon!!!.txt  gulpfile.js  index_original.html  jsconfig.json  new_version.bat  package-lock.json  package.json  sources.txt  timelinify.code-workspace
assets/: icon.ai  placeholder.ai  social_preview.ai
corrections/: test.js  time.ai  time.xlsx
design/: app_card.ai  app_info_tab.ai
release/: index.html
release/css/: _bundle.css
release/js/: _bundle.js
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: accent_color.rs  admin.rs  exe_icon.rs  init_fs.rs  iso8601.rs  main.rs  run.rs
src/js/: _bundle.js  _legacy.js  _tauri_apis.js  app.js  app_confirm_dialog.js  app_edit_tab.js  app_info_tab.js  app_methods.js  calc_usage_time.js  default_browser_hotkeys.js  init_file_structure.js  last_session_dialog.js  locale.js  main.js  migrate.js  save.js  search.js  settings.js  settings_tab.js  timeline.js  unfinished_session.js  validate_paths.js
src/js/libs/: _libs.js  is_today.js  ping.js  sha256.min.js  shoelace-2.7.0.js  to-iso-string.js  unix-to-hms.js
src/locale/: _locale_schema.json  en.json  uk.json
src/stylus/: _bundle.styl  app_confirm_dialog.styl  app_info_tab.styl  dialog.styl  fonts.styl  last_session_dialog.styl  main.styl  scrollbar.styl  style.styl  var.styl
