[package]
name = "timelinify"
version = "1.1.5"
description = "timelinify"
authors = ["graffitt"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["path-all", "window-set-size", "process-exit", "dialog-message", "fs-all", "shell-open", "devtools", "protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
native-dialog = "0.6.4"
chrono = "0.4.26"
dirs-next = "2.0.0"
exe = "0.5.6"
is_elevated = "0.1.2"
winreg = "0.52.0"
blake3 = "1.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
